methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:6: error: ';' expected but 'if' found.
                      else {droite();avance();gauche();p=p+1} if (p==7) {return} }
                                                              ^